--- a/404.html
+++ b/404.html
@@ -7,9 +7,9 @@
   <meta name='viewport' content='width=device-width, initial-scale=1'>
 
   <title>Page Not Found</title>
-  <meta name='description' content="">
+  <meta name='description' content="🏍 💻 🎸">
   <link rel='canonical' href="https://type-jekyll.aspirethemes.com//404.html">
-  <link rel='alternate' type='application/rss+xml' title='Type' href="https://type-jekyll.aspirethemes.com//feed.xml">
+  <link rel='alternate' type='application/rss+xml' title='Josef Weber' href="https://type-jekyll.aspirethemes.com//feed.xml">
 
   <style>
     
@@ -31,7 +31,7 @@
         <div class='o-grid'>
           <div class='o-grid__col o-grid__col--3-4-s'>
             <div class='c-logo u-text-left'>
-              <a class='c-logo__link' href='/'>Type</a>
+              <a class='c-logo__link' href='/'>Josef Weber</a>
             </div>
           </div>
 
@@ -138,12 +138,12 @@
           </a>
         </li>
         <li class='c-social-nav__item'>
-          <a href='' target='_blank'>
+          <a href='https://github.com/weberjoe' target='_blank'>
             <span class='c-social-nav__icon' data-icon='ei-sc-github' data-size='s'></span>
           </a>
         </li>
         <li class='c-social-nav__item'>
-          <a href='mailto:' target='_blank'>
+          <a href='mailto:josef.weber@oracle.com' target='_blank'>
             <span class='c-social-nav__icon' data-icon='ei-envelope' data-size='s'></span>
           </a>
         </li>
